--- a/start.html
+++ b/start.html
@@ -193,7 +193,7 @@
                         <h4 class="experience-company-name"> M.E.I.T.Y </h4>
                         <h5 class="experience-duration m0"> June,2019-August,2019 </h5>
 
-                        <p class="experience-description text-justify"> >Worked closely with various scientists and helped in setting up a small 5G base station in M.E.I.T.Y with knowledge gained from the training. </p>
+                        <p class="experience-description text-justify">Worked closely with various scientists and helped in setting up a small 5G base station in M.E.I.T.Y with knowledge gained from the training. </p>
                     </div>
                 </div>
                 
@@ -205,7 +205,7 @@
                         <h3 class="experience-designation  m0 m-blue"> Web Developer Bootcamp </h3>
                         <h4 class="experience-company-name"> Udemy </h4>
                         <h5 class="experience-duration m0"> January,2020-March,2020</h5>
-                        <p class="experience-description text-justify"> >Completed the course on Udemy and gained knowledge of Frontend and Backend Technologies. </p>
+                        <p class="experience-description text-justify">Completed the course on Udemy and gained knowledge of Frontend and Backend Technologies. </p>
                     </div>
                 </div>
 
