--- a/start.html
+++ b/start.html
@@ -203,7 +203,7 @@
                         <div class="timeline-logo">
                             <img src="udemy.png">
                         </div>
-                        <h3 class="experience-designation  m0 m-blue"> Web Developer Bootcamp </h3>
+                        <h3 class="experience-designation  m0 m-blue"> Developer Bootcamp </h3>
                         <h4 class="experience-company-name"> Udemy </h4>
                         <h5 class="experience-duration m0"> January,2020-March,2020</h5>
                         <p class="experience-description text-justify">Completed the course on Udemy and gained knowledge of Frontend and Backend Technologies. </p>
@@ -276,7 +276,7 @@
                         <div class="timeline-logo">
                             <img src="MAIT.png">
                         </div>
-                        <h3 class="experience-designation  m0 m-blue"> Bachelors of Technology  </h3>
+                        <h3 class="experience-designation  m0 m-blue"> B.Tech  </h3>
                         <h4 class="experience-company-name ">  M.A.I.T,Rohini </h4>
                         <h5 class="experience-duration m0"> August 2017 - August 2021</h5>
 
